[project]
name = "artdeepresearch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "apify>=2.6.0",
    "beautifulsoup4>=4.12.0",
    "crewai>=0.126.0",
    "duckduckgo-search>=8.0.3",
    "helium>=5.1.1",
    "pillow>=11.2.1",
    "python-dotenv>=1.1.0",
    "requests>=2.31.0",
    "ruff>=0.11.13",
    "selenium>=4.33.0",
    "smolagents[toolkit]>=1.18.0",
    "sqlalchemy>=2.0.41",
]
